 2012-04-05 09:48  dimitr 
   M src/dsql/pass1.cpp
Fixed my yesterday's commit.

 2012-04-04 11:00  dimitr 
   M src/dsql/pass1.cpp
Fixed CORE-3807: Error "Invalid expression in the select list" can be unexpectedly raised if a string literal is used inside a GROUP BY clause in a multi-byte connection.

 2012-04-02 15:19  dimitr 
   M src/jrd/rse.cpp
Fixed CORE-3806: Wrong data returned if a sub-query or a computed field refers to the base table in the ORDER BY clause.

 2012-03-31 15:59  asfernandes 
   M src/burp/restore.epp
Fixed CORE-3802 - Firebird runs out of memory while restoring database backup.

 2012-03-29 13:53  hvlad 
   M src/dsql/dsql.cpp
Fixed bug CORE-3801 : Warnings could be put twice in status-vector

 2012-03-29 13:25  hvlad 
   M src/jrd/extds/InternalDS.cpp
Fixed bug CORE-3799 : with caller privileges option don't work with autonomous transaction option

 2012-03-28 18:15  dimitr 
   M doc/WhatsNew
Added the missing bug fixes. I have no clue how they could escape this document :-( My apologies to Vlad.

 2012-03-27 13:17  alexpeshkoff 
   M configure.in
   M src/common/classes/semaphore.cpp
Backported fix for CORE-3770: fbtracemgr loads CPU up to ~55% when no activity is present

 2012-03-27 07:11  dimitr 
   M src/jrd/Database.cpp
   M src/jrd/Database.h
Optimized the shared counter generator to avoid LM calls if there's no contention on the protecting lock.

 2012-03-27 07:10  dimitr 
   M builds/install/misc/firebird.conf.in
   M src/common/classes/TempFile.cpp
   M src/common/config/config.cpp
   M src/jrd/os/win32/winnt.cpp
   M src/utilities/gstat/dba.epp
Fixed CORE-3791: Performance degrades when actively working with databases bigger than the available RAM amount.

 2012-03-24 21:25  robocop 
   M src/jrd/RuntimeStatistics.h
Misc.

 2012-03-22 07:55  dimitr 
   M src/jrd/cvt2.cpp
Slightly changed the logic to make it easier to understand.

 2012-03-21 12:55  hvlad 
   M src/jrd/dpm.epp
Undo patch for CORE-3468
